# ElyesKhechine-eurobot-2023-aerobotix-insat

./: .gitattributes  README.md
3D_Designs/Playing_Area/Decoupage_support/: Base x4.DXF  Cote x8.DXF  Upper x4.DXF
3D_Designs/Robotic_Systems/03-Apr-23_Tirette/: Container_Eurobot_2023_AerobotiX.stl  Container_Lid_Eurobot_2023_AerobotiX.stl  (+1 more)
Elyes_Contributions/3D_Designs/: improvements.txt  notes.txt
Elyes_Contributions/Acceleration_&_Deceleration/: 01-Oct-22_Robot_Navigation_Eurobot_2020_AerobotiX.c  05-Oct-21_Delay_Eurobot_2022_AerobotiX.c  06-Feb-23_Code1_Acceleration_Deceleration_Eurobot_2023_AerobotiX.c  06-Feb-23_Code2_Acceleration_Deceleration_Eurobot_2023_AerobotiX.c  10-Oct-22_Robot_Navigation_Eurobot_2020_AerobotiX.c  20-May-22_Odometry_Eurobot_2022_AerobotiX.c  21-Mar-22_Odometry_Eurobot_2022_AerobotiX.c  25-Feb-23_Code3_Acceleration_Deceleration_Eurobot_2023_AerobotiX.c  28-Apr-22_Motors_Eurobot_2022_AerobotiX.c
Elyes_Contributions/Arduino_Basket_IR_Counter/: Arduino_Basket_IR_Counter.ino
Elyes_Contributions/Marker_Pose_Mapping_to_World_Coordinates/: Marker_Pose_Mapping_to_World_Coordinates_Elyes-KHECHINE_3rd_Kibo_RPC.java  Notes_Mapping_ArUco_Marker_Poses_to_World_Coordinates_Elyes-KHECHINE_Eurobot_2023_AerobotiX.docx
Elyes_Contributions/Path_Interpolation/: Compute_Beta_Path_Interpolation_Elyes-KHECHINE_Eurobot_2023_AeorobotiX.cpp  Full_Implementation_Path_Interpolation_Elyes-KHECHINE_Eurobot_2023_AeorobotiX.cpp  Minkowski_Sum_Path_Interpolation_Elyes-KHECHINE_Eurobot_2023_AeorobotiX.cpp  Notes_Path_Interpolation_Elyes-KHECHINE_Eurobot_2023_AeorobotiX.docx
Elyes_Contributions/Robot_Navigation_Code/: 21-Feb-23_Extra_Functions_Robot_Navigation_Elyes-KHECHINE_Eurobot_2023_AeorobotiX.cpp  21-Feb-23_Raw_Robot_Navigation_Elyes-KHECHINE_Eurobot_2023_AeorobotiX.cpp  21-Feb-23_STM32_ROS_Communication_Elyes-KHECHINE_Eurobot_2023_AeorobotiX.cpp
Elyes_Contributions/Robots_Strategy/: 08-May-23_Robot1_Sequence_RPi4_Elyes-KHECHINE_Eurobot_2023_AeorobotiX.py  13-Apr-23_Robot2_Sequence_RPi4_Elyes-KHECHINE_Eurobot_2023_AeorobotiX.py  14-Apr-23_Robot1_Sequence_RPi4_Elyes-KHECHINE_Eurobot_2023_AeorobotiX.py  Proposed_Robots_Strategy_Elyes-KHECHINE_Eurobot_2023_AeorobotiX.xlsx
Raspberry_Pi4_src/: IP_Address_RPi4_Eurobot_2023_AerobotiX.txt
Raspberry_Pi4_src/alfons_msgs/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake
Raspberry_Pi4_src/reel_euro2021/: CMakeLists.txt
Raspberry_Pi4_src/reel_euro2021/bash_scripts/: find_portScreen
Raspberry_Pi4_src/reel_euro2021/config/: .global_costmap_params.yaml.swp  base_local_planner_params.yaml  camera.yaml  global_costmap_params.yaml  loukil_camera.yaml  move_base_params.yaml  mriguel.yaml
Raspberry_Pi4_src/reel_euro2021/launch/: cameraAsfar.launch  navi_robot_teb.launch  onRobotSghir.launch
Raspberry_Pi4_src/reel_euro2021/maps/: mapjdida.yaml
Raspberry_Pi4_src/reel_euro2021/meshes/: B_Link.STL  L_W_Link.STL
Raspberry_Pi4_src/reel_euro2021/msg/: mission.msg
Raspberry_Pi4_src/reel_euro2021/scripts/: StmParam.json  StmParamSghir.json  evitement.py  evitementCmdSghir.py  missions_original.json  panier.py  poses.kbir  screenReOLD.py  screenReciever.py  send_goal.py  sequenceRobotSghir.py
Raspberry_Pi4_src/reel_euro2021/src/: detectionArucoMilieu.cpp  ta7wil.cpp
Raspberry_Pi4_src/reel_euro2021/srv/: jd.srv
Raspberry_Pi4_src/reel_euro2021/urdf/: m2wr.xacro  test2_1.urdf
STM32_src/: .cproject  .mxproject  .project  stmCode_Final Debug.launch  stmCode_Final.ioc
STM32_src/.metadata/: .log4j.xml  version.ini
STM32_src/Debug/: chatter_f4.map  makefile  sources.mk  stmCode_Final.elf  stmCode_Final.map  stmCode_Final_kbir.list  stmCode_Final_kbir.map
STM32_src/Inc/: main.h  stmRos.h
STM32_src/Src/: Robot_Navi_Euro2023.cpp  tim.c
STM32_src/Startup/: startup_stm32f446retx.s
Specifications/: Counting_Score_Points_Eurobot_2023_AerobotiX.docx  Summary_of_Rules_EN_Eurobot_2023_AerobotiX.docx
Tests/09-Sep-22_STM32_Test_Eurobot_2023_AerobotiX/: .cproject  .project  nucleo-test.ioc
Tests/14-Apr-23_STM32_Source_Code_Eurobot_2023_AerobotiX/: .cproject  .mxproject  .project  chatter_f4 Debug.launch  stmCode_Final Debug.launch  stmCode_Final.ioc  stmCode_Final_kbir Debug.launch
Tests/20-Jan-23_Arduino_Servo_Motor_Test/: 20-Jan-23_Arduino_Servo_Motor_Test.ino
Tests/25-Jan-23_Arduino_Motor_Test/: 25-Jan-23_Arduino_Motor_Test.ino
(+1525 files in other folders)
